# anofox-regression

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.beads/: issues.jsonl
benches/: aid_benchmark.rs
crates/anofox-regression-js/: Cargo.toml
crates/anofox-regression-js/src/: lib.rs
crates/anofox-regression-js/src/regressors/: aid.rs  alm.rs  bayesian.rs  binomial.rs  bls.rs  elastic_net.rs  gamma.rs  huber.rs  isotonic.rs  lars.rs  lm_dynamic.rs  logistic.rs  lowess.rs  mod.rs  negative_binomial.rs  ols.rs  passive_aggressive.rs  pls.rs  poisson.rs  quantile.rs  ransac.rs  ridge.rs  rls.rs  theil_sen.rs  tweedie.rs  wls.rs
crates/anofox-regression-js/tests/: web.rs
doc/: API_REFERENCE.md
examples/: aid.rs  bayesian.rs  bls.rs  gamma.rs  huber.rs  isotonic.rs  lars.rs  logistic.rs  passive_aggressive.rs  pls.rs  quantile.rs  ransac.rs  streaming_ridge.rs  theil_sen.rs  wls.rs
js/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/: lib.rs
tests/: alm_loss_tests.rs  alm_tests.rs  diagnostics_tests.rs  duckdb_scenarios_tests.rs  elastic_net_tests.rs  isotonic_edge_cases.rs  moments_streaming.rs  ols_tests.rs  prediction_interval_tests.rs  quantile_edge_cases.rs  r_validation_alm_extended.rs  r_validation_bayesian.rs  r_validation_gamma.rs  r_validation_glm.rs  r_validation_hc.rs  r_validation_huber.rs  r_validation_isotonic.rs  r_validation_lars.rs  r_validation_logistic.rs  r_validation_passive_aggressive.rs  r_validation_pls.rs  r_validation_quantile.rs  r_validation_quantile_extended.rs  r_validation_ransac.rs  (+7 more)
(+88 files in other folders)
