[package]
name = "anofox-regression-js"
version = "0.5.0"
authors = ["Simon M"]
edition = "2021"
description = "WebAssembly bindings for anofox-regression statistical regression library"
license = "MIT"
repository = "https://github.com/sipemu/anofox-regression"
readme = "../../js/README.md"
keywords = ["wasm", "regression", "statistics", "javascript", "typescript"]
categories = ["wasm", "science", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anofox-regression = { path = "../.." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
faer = { version = "0.23", default-features = false, features = ["std", "linalg"] }

# WASM support for random number generation
# getrandom 0.2 is used by statrs, 0.3 is used by anofox-regression
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
